# gcmethod_2d

./: CMakeLists.txt  analyzer.h  gcmethod_2d.h  gcmethod_2d.ini  linear_elastisity_2d.h  main  main.cpp  mesh_2d.h  simple2Dgc_method.h  tensor2d.h  vector2.h
lib/triangle/: showme  triangle  tricall
src/: analyzer.h  convection_equation_solver.cpp  convection_equation_solver.h  linear_elastisity_2d.cpp  linear_elastisity_2d.h  linela2d.cpp  linela2d.h  main.cpp  tensor2d.h  vector2d.h
src/mesh_2d/: CMakeLists.txt  mesh_2d.cpp  mesh_2d.h
